# svc

./: .hgignore  CMakeLists.txt  Makefile  README.md  TODO  audio.c  audio.h  audio_api.h  compile_jim.sh  packet_cage.c  test_threads.c  thread.h
cmake/: FindCelt.cmake  FindENet.cmake  FindJack.cmake
docs/: TODO  VoiceChat.textile  constraints.md
src/: Makefile
src/common/: basedir.c  config.h  dstr.c  dstr.h  dstrutils.c  dstrutils.h  enetcheck.h  list.h  thread.c  thread.h
src/libsvc/: audio.c  audio.h  audio_api.h  audio_api_alsa.c  audio_api_dummy.c  audio_api_jack.c  audio_api_oss.c  audio_api_portaudio.c  codec.c  codec.h  libsvc.c  libsvc.h  libsvc_incoming.c  libsvc_incoming.h  libsvc_options.h  libsvc_outgoing.h  network_packet.c  network_packet.h  packet_cage.c  packet_cage.h  packet_queue.c  packet_queue.h
src/libsvc/include/: libsvc.h
src/network/: router.cfg
src/network/svc/client/: main.c
src/network/svc/common/: net.h
src/network/svc/server/: channels.c  channels.h  main.c  peer.c  peer.h  protocol.c  protocol.h  server.h
src/network/svcd/: main.c
src/network/svcd/client/: main.c
src/network/svcd/server/: main.c
src/network/svcenet/: PeerInfo.txt  README
src/network/svcenet.old/client/: main.c
src/network/svcenet.old/server/: main.c
src/network/svcenet/client/: main.c
src/network/svcenet/common/: dsdict.h
src/network/svcenet/server/: config.cfg  main.c  main.tcl
src/network/svcenet/wx/: app.cpp  app.hpp  readerthread.cpp  readerthread.hpp  svcevent.cpp  svcevent.hpp  svcobjectinfo.cpp  svcobjectinfo.hpp  svcparser.cpp  svcparser.hpp  svcreaderthread.cpp  svcreaderthread.hpp  svcstate.cpp  svcstate.hpp  svcwindow.cpp  svcwindow.hpp
src/network/svcp2p/: main.c
src/svc/: main.c
src/svccd/: audio.h  audio_api.h  audio_api_portaudio.c  codec.h  main.c  packet_cage.c
src/tests/: test_audio_api.c  test_audio_cage_queue.c  test_audio_packet_cage.c  test_dstr.c  test_dstrutils.c  test_libsvc.c  tests_utils.c  tests_utils.h
